--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ data_interchange/data_interchange.vcxproj.user
 net_working.VC.db
 net_working.VC.VC.opendb
 publish/
+data_interchange/data_interchange.log
