--- a/.gitignore
+++ b/.gitignore
@@ -3,27 +3,6 @@
 data_interchange/data_interchange.vcxproj.user
 net_working.VC.db
 net_working.VC.VC.opendb
-publish/Debugx86/data_interchange.log
-publish/Debugx86/data_interchange.tlog/data_interchange.lastbuildstate
-data_interchange/x64/Debug/data_interchange.log
-data_interchange/x64/Debug/data_interchange.tlog/CL.command.1.tlog
-data_interchange/x64/Debug/data_interchange.tlog/CL.read.1.tlog
-data_interchange/x64/Debug/data_interchange.tlog/CL.write.1.tlog
-data_interchange/x64/Debug/data_interchange.tlog/data_interchange.lastbuildstate
-data_interchange/x64/Debug/data_interchange.tlog/unsuccessfulbuild
-data_interchange/x64/Debug/vc140.idb
-data_interchange/x64/Debug/vc140.pdb
-publish/Debugx86/data_interchange.dll
-publish/Debugx86/data_interchange.ilk
-publish/Debugx86/data_interchange.map
-publish/Debugx86/data_interchange.obj
-publish/Debugx86/data_interchange.pdb
-publish/Debugx86/data_interchange.tlog/CL.command.1.tlog
-publish/Debugx86/data_interchange.tlog/CL.read.1.tlog
-publish/Debugx86/data_interchange.tlog/CL.write.1.tlog
-publish/Debugx86/data_interchange.tlog/link.command.1.tlog
-publish/Debugx86/data_interchange.tlog/link.read.1.tlog
-publish/Debugx86/data_interchange.tlog/link.write.1.tlog
-publish/Debugx86/vc140.idb
-publish/Debugx86/vc140.pdb
+data_interchange/x64/Debug/
+publish/Debugx86/
 data_interchange/data_interchange.log
